<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/grid_9x">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome_text"
        style="@style/TitleBold"
        android:textColor="@color/green_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/welcome"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/F4"
        android:text="@string/username"
        android:id="@+id/usernameLabel"
        app:layout_constraintTop_toBottomOf="@id/welcome_text"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/grid_6x"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        app:layout_constraintTop_toBottomOf="@id/usernameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/input_background"
        android:padding="@dimen/grid_2x"
        android:layout_marginTop="@dimen/grid_3x"
        style="@style/F3"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/F4"
        android:text="@string/password"
        android:id="@+id/passwordLabel"
        app:layout_constraintTop_toBottomOf="@id/usernameEditText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="@dimen/grid_6x"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/passwordEditText"
        app:layout_constraintTop_toBottomOf="@id/passwordLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/input_background"
        android:padding="@dimen/grid_3x"
        android:layout_marginTop="@dimen/grid_2x"
        style="@style/F3"
        />

    </androidx.constraintlayout.widget.ConstraintLayout>