<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="@dimen/grid_1x"
    app:cardCornerRadius="@dimen/grid_3x"
    android:layout_marginBottom="@dimen/grid_2x"
    android:id="@+id/plantCard"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/grid_3x">

        <ImageView
            android:layout_width="@dimen/image_small_width"
            android:layout_height="@dimen/image_small_width"
            android:id="@+id/plantCardImage"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <TextView
            android:layout_width="@dimen/fill_container"
            android:layout_height="wrap_content"
            android:id="@+id/plantCardName"
            style="@style/F3"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/plantCardImage"
            android:layout_marginLeft="@dimen/grid_3x"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/waterIcon"
            android:src="@drawable/ic_rain"
            app:layout_constraintTop_toTopOf="@id/plantCardLastWatered"
            app:layout_constraintBottom_toBottomOf="@id/plantCardLastWatered"
            app:layout_constraintStart_toStartOf="@id/plantCardName"
            />


        <TextView
            android:layout_width="@dimen/fill_container"
            android:layout_height="wrap_content"
            android:id="@+id/plantCardLastWatered"
            style="@style/Body"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/plantCardName"
            app:layout_constraintStart_toEndOf="@id/waterIcon"
            android:layout_marginStart="@dimen/grid_1x"
            android:layout_marginTop="@dimen/grid_1x"
            android:text="@string/last_watered"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/clockIcon"
            android:src="@drawable/ic_clock"
            app:layout_constraintTop_toTopOf="@id/plantCardSchedule"
            app:layout_constraintBottom_toBottomOf="@id/plantCardSchedule"
            app:layout_constraintStart_toStartOf="@id/plantCardName"
            />

        <TextView
            android:layout_width="@dimen/fill_container"
            android:layout_height="wrap_content"
            android:id="@+id/plantCardSchedule"
            style="@style/Body"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/plantCardLastWatered"
            app:layout_constraintStart_toEndOf="@id/clockIcon"
            android:layout_marginStart="@dimen/grid_1x"
            android:layout_marginTop="@dimen/grid_1x"
            android:text="@string/every"
            />

        <android.widget.Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/water_cta"
            android:backgroundTint="@color/blue_light"
            android:background="@drawable/button_compact_background"
            android:padding="@dimen/button_compact_padding_vertical"
            style="@style/MyButtonStyleSmall"
            android:textColor="@color/blue_regular"
            android:id="@+id/plantCardButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:drawableLeft="@drawable/ic_rainblue"
            android:paddingStart="@dimen/button_compact_padding_horizontal"
            android:drawablePadding="@dimen/grid_2x"
            android:paddingEnd="@dimen/button_compact_padding_horizontal"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>